--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(dmc_example dmc_example.cpp)
 target_link_libraries(dmc_example deep_mw_cfr)
+# target_compile_options(dmc_example PRIVATE -Wall -Wextra -Wunreachable-code -fconcepts)
 
 add_executable(inspect_game inspect_game.cpp)
 # add games to have them all registered before main
