Filled Solver implementation

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(dmc_example dmc_example.cpp)
-target_link_libraries(dmc_example deep_mw_cfr)
+target_link_libraries(dmc_example deep_mw_cfr games)
 # target_compile_options(dmc_example PRIVATE -Wall -Wextra -Wunreachable-code -fconcepts)
 
 add_executable(inspect_game inspect_game.cpp)
