--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ target_link_libraries(deep_mw_cfr
   # Boost::filesystem
   fmt::fmt
   range-v3
+  nlohmann_json::nlohmann_json
   absl::container
   absl::flags
   absl::flags_parse
